# ironhide

./: .gitignore  README.md  pyproject.toml
examples/: .env.example  .gitignore  README.md  examples.ipynb  pyproject.toml
examples/calculator/app/: main.py
examples/calculator/scripts/: request.sh
ironhide/: __init__.py  gemini.py  settings.py  utils.py
